feat: Revisão e elaboração completa da Introdução ao Notebook

--- a/analise_python.ipynb
+++ b/analise_python.ipynb
@@ -6,7 +6,21 @@
    "source": [
     "# Resposta às perguntas do arquivo \"perguntas_sql.md\"\n",
     "\n",
-    "Este *python notebook* visa responder as questões 1 a 10 utilizando python, principalmente pandas. Considerando que a base principal tem mais de 10 milhões de linhas, farei duas *queries* usando o método `read_sql()` do pacote `basedosdados`."
+    "Este *notebook* tem como objetivo responder às questões 1 a 10 utilizando Python, com ênfase no uso da biblioteca `pandas`. Considerando que a base principal contém mais de 10 milhões de registros, algumas consultas serão realizadas com o método `read_sql()` do pacote `basedosdados`, a fim de obter dados minimamente tratados diretamente do BigQuery.\n",
+    "\n",
+    "Embora o método `read_sql()` permita responder diretamente às questões utilizando comandos SQL, o foco deste teste técnico é demonstrar proficiência com o `pandas`. Portanto, as consultas SQL foram propositalmente simplificadas para que o tratamento dos dados relevantes às perguntas seja realizado majoritariamente em Python.\n",
+    "\n",
+    "O notebook está dividido em duas seções:\n",
+    "- **Respostas às perguntas 1 a 5**\n",
+    "- **Respostas às perguntas 6 a 10**\n",
+    "\n",
+    "No início de cada seção, há *chunks* de código que devem ser executados previamente. Esses blocos geralmente incluem consultas que retornam bases de dados \"brutas\" necessárias para as questões da seção ou procedimentos que evitam redundâncias — como tratamentos recorrentes utilizados por mais de uma pergunta.\n",
+    "\n",
+    "**Portanto, para rodar qualquer uma das perguntas de uma seção, é obrigatório executar:**\n",
+    "1. O primeiro bloco geral do notebook (logo abaixo deste texto), que carrega bibliotecas e funções auxiliares.\n",
+    "2. Os blocos de código logo após o título da seção correspondente (iniciados com `##`), que trazem as bases ou preparações comuns às perguntas daquela seção.\n",
+    "\n",
+    "Cada subseção de pergunta (marcadas com `###`) contém *chunks* independentes entre si. Ou seja, **você não precisa rodar o código da pergunta 6 para executar a pergunta 7** — desde que os blocos gerais e os da seção já tenham sido executados previamente."
    ]
   },
   {
