fix: pequenas mudanças em algumas respostas

--- a/analise_api.ipynb
+++ b/analise_api.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d42cf836-11e3-4631-9dee-496e00e406ec",
+       "ref": "bfb699ca-2ae0-4ee8-881c-137f0d147102",
        "rows": [
         [
          "0",
@@ -590,7 +590,7 @@
        "11   Dezembro      25.81"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -665,15 +665,15 @@
      "output_type": "stream",
      "text": [
       "Tempo e Temperatura média para os feriados que ocorreram entre 01/01/2024 e 01/08/2024:\n",
-      "Feriado de Confraternização Universal (01 de janeiro de 2024): Garoa leve com temperatura média de 24.9°C\n",
-      "Feriado de Carnaval (12 de fevereiro de 2024): Nublado com temperatura média de 30.2°C\n",
-      "Feriado de Carnaval (13 de fevereiro de 2024): Garoa leve com temperatura média de 30.5°C\n",
-      "Feriado de Sexta-feira Santa (29 de março de 2024): Chuva leve com temperatura média de 25.0°C\n",
-      "Feriado de Domingo de Páscoa (31 de março de 2024): Garoa moderada com temperatura média de 24.5°C\n",
-      "Feriado de Dia de Tiradentes (21 de abril de 2024): Parcialmente nublado com temperatura média de 23.1°C\n",
-      "Feriado de Dia do Trabalhador (01 de maio de 2024): Ensolarado com temperatura média de 28.1°C\n",
-      "Feriado de Corpus Christi (30 de maio de 2024): Garoa leve com temperatura média de 20.8°C\n",
-      "Feriado de Revolução Constitucionalista de 1932 (09 de julho de 2024): Garoa moderada com temperatura média de 21.5°C\n"
+      "Feriado de Confraternização Universal (01 de janeiro de 2024): Garoa leve com temperatura média de 24.9°C.\n",
+      "Feriado de Carnaval (12 de fevereiro de 2024): Nublado com temperatura média de 30.2°C.\n",
+      "Feriado de Carnaval (13 de fevereiro de 2024): Garoa leve com temperatura média de 30.5°C.\n",
+      "Feriado de Sexta-feira Santa (29 de março de 2024): Chuva leve com temperatura média de 25.0°C.\n",
+      "Feriado de Domingo de Páscoa (31 de março de 2024): Garoa moderada com temperatura média de 24.5°C.\n",
+      "Feriado de Dia de Tiradentes (21 de abril de 2024): Parcialmente nublado com temperatura média de 23.1°C.\n",
+      "Feriado de Dia do Trabalhador (01 de maio de 2024): Ensolarado com temperatura média de 28.1°C.\n",
+      "Feriado de Corpus Christi (30 de maio de 2024): Garoa leve com temperatura média de 20.8°C.\n",
+      "Feriado de Revolução Constitucionalista de 1932 (09 de julho de 2024): Garoa moderada com temperatura média de 21.5°C.\n"
      ]
     }
    ],
@@ -684,7 +684,7 @@
     ")\n",
     "\n",
     "tempo_feriados_ate_agosto = (\n",
-    "    traduzir_wmo_code(tempo_feriados, 'weather_code', 'desc_wmo_pt')\n",
+    "    traduzir_wmo_code(tempo_feriados_ate_agosto, 'weather_code', 'desc_wmo_pt')\n",
     "    .loc[:, ['date', 'localName', 'temperature_2m_mean', 'desc_wmo_pt']]\n",
     "    .assign(\n",
     "        date_str = lambda x: x.date.dt.strftime('%d de %B de %Y')\n",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -766,14 +766,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O melhor feriado para praia foi o Dia do Trabalhador que ocorreu no dia 01 de maio de 2024\n"
+      "O melhor feriado para praia foi o Dia do Trabalhador que ocorreu no dia 01 de maio de 2024.\n"
      ]
     }
    ],
